--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "server": "node server/index.js",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.2.9",
     "mongoose-findorcreate": "^3.0.0",
+    "nodemon": "^2.0.20",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
